# mcp_server_library

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
demo/: mcp_client.py  mcp_sampling_client.py  mcp_sampling_server.py  mcp_server.py  mcp_sse_server.py  自动生成报告.ipynb
src/: convert_natural_language_to_sql_mcp_server.py  job_aids_server.py  mcp_drone_order_server.py  mcp_server.json  prompt.txt  template_generator_client.py  template_generator_client2.py  xxx月工单周报.md
src/demo/: mcp_client.py  mcp_lower_server.py  mcp_sse_client.py
